# cinemaBot

./: README.md  dispatcher.py  main.py  pyproject.toml
cinema_bot/: actions.py  consts.py  keyboards.py
config/: settings.py
db/: botDB.py
search/: Film.py  consts.py  search.py
